Bug 1409731 - Expose input[type=date/time] correctly in a11y. r=surkov, r=jjong